--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,8 +2,9 @@ name: FactionsExtras
 version: ${project.version}
 main: me.ufo.factions.extras.Extras
 depend: [ Factions, Architect ]
-softdepend: [ ShopGUIPlus, Vault ]
+softdepend: [ ShopGUIPlus, Vault, WorldEdit, FastAsyncWorldEdit ]
 commands:
   tools:
   genbuckets:
     aliases: [ gb, gen, genbucket ]
+  chunkbusters:
